<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/bg"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/event_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:padding="10dp"
                            android:text="@string/event_name"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />


                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/event_location"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/event_name" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/event_time"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/location" />

                        <TextView
                            android:id="@+id/fee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/event_fee"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/time" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/event_description"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/fee" />

                        <TextView
                            android:id="@+id/organizer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/event_organizer"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16ssp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/description" />

                        <TextView
                            android:id="@+id/contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/event_contact"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16ssp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/organizer" />

                        <Button
                            android:id="@+id/buy"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="@dimen/_10sdp"
                            android:background="@drawable/round_bg"
                            android:text="@string/buy"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            app:backgroundTint="@null"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/contact" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_50sdp"
                    tools:listitem="@layout/from_message_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />

                <TextView
                    android:id="@+id/no_comment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:visibility="invisible"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/send"
            android:maxHeight="80dp"
            android:textColor="@color/black"
            android:textColorHint="@color/bg" />

        <ImageView
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:padding="4dp"
            android:src="@android:drawable/ic_menu_send"
            app:tint="@color/bg" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>